--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "apollo-server-express": "^3.13.0",
+    "dotenv": "^17.2.0",
+    "express": "^4.18.2",
+    "graphql": "^16.11.0",
+    "mongoose": "^8.16.4"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3",
+    "@types/express": "^4.17.21",
     "@types/node": "^24.0.15",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
