--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec ts-node index.ts",
+    "build": "rimraf dist && tsc",
+    "ts:check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
+  "pre-commit": [
+    "ts:check",
+    "build",
+    "add-build"
+  ],
   "author": "",
   "license": "ISC",
   "description": "",
@@ -15,7 +24,9 @@
     "express": "^4.18.2",
     "graphql": "^16.11.0",
     "md5": "^2.3.0",
-    "mongoose": "^8.16.4"
+    "mongoose": "^8.16.4",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.10"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
